<resources>
    <string name="app_name">Portfolio</string>
    <string name="title">Nanodegree Apps:</string>
    <string name="button_1">Spotify Streamer</string>
    <string name="button_2">Football Scores App</string>
    <string name="button_3">Library App</string>
    <string name="button_4">Build It Bigger</string>
    <string name="button_5">XYZ Reader</string>
    <string name="button_6">Capstone : My Project</string>
</resources>
