<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="24dp"
                    android:scrollHorizontally="false"
                    android:text="@string/title"
                    android:textSize="24sp" />

                <Button
                    style="@style/AppTheme"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:onClick="onClickButton1"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/button_1" />

                <Button
                    style="@style/AppTheme"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:onClick="onClickButton2"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/button_2" />

                <Button
                    style="@style/AppTheme"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:onClick="onClickButton3"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/button_3" />

                <Button
                    style="@style/AppTheme"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:onClick="onClickButton4"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/button_4" />

                <Button
                    style="@style/AppTheme"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:onClick="onClickButton5"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/button_5" />

                <Button
                    style="@style/AppTheme"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:onClick="onClickButton6"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/button_6"
                    android:textColor="@color/colorAccent" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

</android.support.v4.widget.NestedScrollView>
